[package]
name = "hypercrab"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
fdt = {version = "0.1.5"}
spin = "0.9.8"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.0.1"
x86 = "0.52.0"
x86_64 = "0.15.0"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.9.1"
